projects/vb6parse/snapshots/syntax/statements/control_flow/exit/exit_for.snap
---
source: projects/vb6parse/src/syntax/statements/control_flow/exit.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "10"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: i
                            - kind: Whitespace
                              text: " "
                            - kind: EqualityOperator
                              text: "="
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "5"
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Whitespace
                          text: " "
                        - kind: ExitStatement
                          children:
                            - kind: ExitKeyword
                              text: Exit
                            - kind: Whitespace
                              text: " "
                            - kind: ForKeyword
                              text: For
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
